Résolution bug chevauchement version tablette/mobile à 600px

--- a/style.css
+++ b/style.css
@@ -636,7 +636,7 @@ footer a:hover {
 /********************/
 /******************** version TABLETTE > 600px, < 1200px ********************/
 /********************/
-@media (min-width: 600px) and (max-width: 1200px) {
+@media (min-width: 601px) and (max-width: 1200px) {
   main {
     padding-left: 5px;
     padding-right: 5px;
